@@ -1,5 +1,15 @@
 2003-05-16  John Levon  <levon@movementarian.org>
 
+	* libutil++/op_bfd.h:
+	* libutil++/op_bfd.cpp: expose anonymous symbols
+	to the world as "??sectionname". Useful for .plt
+	and .fini, which are quite common.
+
+	* libpp/name_storage.cpp: demangle anonymous symbols
+	nicely.
+
+2003-05-16  John Levon  <levon@movementarian.org>
+
 	* libpp/symbol_sort.cpp: fix image-sorting
 
 2003-05-16  John Levon  <levon@movementarian.org>
